--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
+    "@tanstack/react-query": "^5.28.14",
+    "@web3modal/siwe": "^4.1.4",
+    "@web3modal/wagmi": "^4.1.4",
     "axios": "^0.26.0",
     "bootstrap": "^5.3.3",
     "chai": "^4.3.6",
@@ -23,12 +26,15 @@
     "ethers": "^5.7.2",
     "hardhat": "^2.19.1",
     "ipfs-http-client": "^56.0.3",
-    "next": "11.0.1",
-    "react": "17.0.2",
+    "next": "^12.3.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
-    "react-dom": "17.0.2",
-    "web3modal": "^1.9.5",
-    "web3": "^1.0.0-beta.31"
+    "react-dom": "^18.2.0",
+    "siwe": "^2.1.4",
+    "viem": "^2.9.8",
+    "wagmi": "^2.5.18",
+    "web3": "^1.0.0-beta.31",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
